--- a/ci/build
+++ b/ci/build
@@ -1,11 +1,13 @@
 #!/bin/bash
 # vim: set ft=sh
 
-set -eu
+set -e -u -x
 
 export TMPDIR=/tmp
 export GOPATH=$PWD/gopath
 export PATH=$GOPATH/bin:$PATH
+
+BUILD_DIR=$PWD/built-resource
 
 cd $GOPATH/src/github.com/concourse/pool-resource
 
@@ -16,4 +18,5 @@ go install github.com/onsi/ginkgo/ginkgo
 
 CGO_ENABLED=1 ginkgo -race -r -p "$@"
 
-go build -o built-out ./cmd/out
+cp -a test/ assets/ Dockerfile $BUILD_DIR
+go build -o $BUILD_DIR/built-out ./cmd/out
