--- a/build.yml
+++ b/build.yml
@@ -1,8 +1,11 @@
 ---
 platform: linux
 
-image: docker:///concourse/pool-resource-test
-
+image_resource: 
+  type: docker-image
+  source:
+    repository: concourse/pool-resource-test
+    
 inputs:
 - name: pool-resource
   path: gopath/src/github.com/concourse/pool-resource
