update dockerfiles to use the correct tags
- should specify `ubuntu` or `alpine` tags for base image

Signed-off-by: Bin Ju <bju@pivotal.io>
Co-authored-by: Bohan Chen <bochen@pivotal.io>

--- a/dockerfiles/ubuntu/Dockerfile
+++ b/dockerfiles/ubuntu/Dockerfile
@@ -8,7 +8,7 @@ RUN set -e; for pkg in $(go list ./...); do \
 		go test -o "/tests/$(basename $pkg).test" -c $pkg; \
 	done
 
-FROM concourse/git-resource AS resource
+FROM concourse/git-resource:ubuntu AS resource
 
 ADD assets/ /opt/resource/
 RUN chmod +x /opt/resource/*
