--- a/dockerfiles/alpine/Dockerfile
+++ b/dockerfiles/alpine/Dockerfile
@@ -12,7 +12,7 @@ RUN set -e; for pkg in $(go list ./...); do \
 	done
 
 FROM ${base_image} AS resource
-RUN apk add --no-cache bash jq git git-daemon
+RUN apk add --no-cache bash jq git git-daemon openssh
 RUN git config --global user.email "git@localhost"
 RUN git config --global user.name "git"
 ADD assets/ /opt/resource/
