--- a/dockerfiles/alpine/Dockerfile
+++ b/dockerfiles/alpine/Dockerfile
@@ -11,13 +11,22 @@ RUN set -e; for pkg in $(go list ./...); do \
 	done
 
 FROM ${base_image} AS resource
-RUN apk add --no-cache bash jq git git-daemon openssh
+RUN apk add --no-cache bash jq git git-daemon openssh make g++ libressl-dev
 RUN git config --global user.email "git@localhost"
 RUN git config --global user.name "git"
+
 ADD assets/ /opt/resource/
 RUN chmod +x /opt/resource/*
 COPY --from=builder /assets /opt/go
 RUN chmod +x /opt/go/out
+
+WORKDIR /root
+RUN git clone https://github.com/proxytunnel/proxytunnel.git && \
+    cd proxytunnel && \
+    make -j4 && \
+    install -c proxytunnel /usr/bin/proxytunnel && \
+    cd .. && \
+    rm -rf proxytunnel
 
 FROM resource AS tests
 COPY --from=builder /tests /go/resource-tests/
@@ -26,5 +35,11 @@ RUN set -e; for test in /go/resource-tests/*.test; do \
 	done
 ADD test/ /opt/resource-tests
 RUN /opt/resource-tests/all.sh
+
+FROM resource AS integrationtests
+RUN apk --no-cache add squid
+ADD test/ /opt/resource-tests/test
+ADD integration-tests /opt/resource-tests/integration-tests
+RUN /opt/resource-tests/integration-tests/integration.sh
 
 FROM resource
