--- a/dockerfiles/ubuntu/Dockerfile
+++ b/dockerfiles/ubuntu/Dockerfile
@@ -11,7 +11,7 @@ RUN set -e; for pkg in $(go list ./...); do \
 	done
 
 FROM ${base_image} AS resource
-RUN apt-get update && apt-get install -y jq git
+RUN apt-get update && apt-get install -y jq git make g++ libssl-dev openssh-client
 RUN git config --global user.email "git@localhost"
 RUN git config --global user.name "git"
 
@@ -20,6 +20,14 @@ RUN chmod +x /opt/resource/*
 COPY --from=builder /assets /opt/go
 RUN chmod +x /opt/go/out
 
+WORKDIR /root
+RUN git clone https://github.com/proxytunnel/proxytunnel.git && \
+    cd proxytunnel && \
+    make -j4 && \
+    install -c proxytunnel /usr/bin/proxytunnel && \
+    cd .. && \
+    rm -rf proxytunnel
+
 FROM resource AS tests
 COPY --from=builder /tests /go/resource-tests/
 RUN set -e; for test in /go/resource-tests/*.test; do \
@@ -27,5 +35,11 @@ RUN set -e; for test in /go/resource-tests/*.test; do \
 	done
 ADD test/ /opt/resource-tests
 RUN /opt/resource-tests/all.sh
+
+FROM resource AS integrationtests
+RUN apt-get update && apt-get install -y squid net-tools
+ADD test/ /opt/resource-tests/test
+ADD integration-tests /opt/resource-tests/integration-tests
+RUN /opt/resource-tests/integration-tests/integration.sh
 
 FROM resource
